fix/socialIcons: fix social icons color and spacing

--- a/src/components/credits/credits.scss
+++ b/src/components/credits/credits.scss
@@ -31,6 +31,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
     text-transform: uppercase;
 
     &-getInTouch {
@@ -60,7 +61,8 @@
     &-social {
       display: flex;
       align-items: center;
-      justify-content: center;
+      justify-content: space-between;
+      width: 110px;
     }
   }
 
